- It's now possible to rename drives (which changes their label).
- When renaming an item, the display name is switched with the
  editing name. That ensures that the text being changed is
  correct when the item is a drive.
- It's now possible to delete a folder that's open in Explorer++.
  In that situation, the associated tab will navigate to the
  parent folder.
- A --select command line option has been added that will open a
  directory and select the file specified. See #208.
- Paths separated by forward slashes are now accepted. See #382.
- The home folder can now optionally be shown in the treeview.
- An option to display mixed files and folders has been added and
  can be set via Tools > Options > File and Folders > Display
  mixed files and folders. See #30.
- An option to choose whether to use a natural sort order (i.e. a
  sort order in which file2.txt comes before file19.txt) has been
  added and can be set via Tools > Options > File and Folders >
  Use natural sort order. See #46.
- An option to disable navigating up when double clicking in an
  empty area in the listview has been added. The option can be
  set via Tools > Options > Advanced > Go up on double click
  in listview.
- When right-clicking a bookmark in the main menu, a context menu
  is now shown.
- Added Arabic (United Arab Emirates), Greek and Portuguese
  (Brazil) translations.
- The layout will now be switched to RTL when using the Arabic or
  Hebrew translations.

Bug fixes:
- Fixed a crash that could occur on startup when the "Open new
  tabs next to the current one" option was enabled.
- Fixed a crash that could occur when autosizing columns.
- Fixed a crash that could occur when retrieving the icon for a
  treeview item. See #385.
- Fixed a crash that could occur when attempting to create a
  folder in a location where the total path length for the new
  item would be greater than 260 characters.
- Fixed a crash that could occur when retrieving the status of a