@@ -237,7 +237,7 @@ private:
 	void OnDeviceChange(WPARAM wParam, LPARAM lParam);
 	void OnFocusNextWindow(FocusChangeDirection direction);
 	void OnAppCommand(UINT cmd);
-	void OnDirectoryModified(const Tab &tab);
+	void OnDirectoryContentsChanged(const Tab &tab);
 	void OnAssocChanged();
 	void OnSelectTabByIndex(int iTab);
 	void OnChangeMainFontSize(FontSizeType sizeType);
