@@ -27,6 +27,7 @@ private:
 	LRESULT WndProc(HWND hwnd, UINT msg, WPARAM wParam, LPARAM lParam);
 
 	void OnNavigationCommitted(const Tab &tab, const NavigateParams &navigateParams);
+	void OnDirectoryPropertiesChanged(const Tab &tab);
 	void OnTabSelected(const Tab &tab);
 
 	void OnShowFullTitlePathUpdated(BOOL newValue);
