@@ -121,6 +121,8 @@ void TaskbarThumbnails::SetUpObservers()
 		std::bind_front(&TaskbarThumbnails::OnNavigationCommitted, this)));
 	m_connections.push_back(m_tabContainer->tabNavigationCompletedSignal.AddObserver(
 		std::bind_front(&TaskbarThumbnails::OnNavigationCompleted, this)));
+	m_connections.push_back(m_tabContainer->tabDirectoryPropertiesChangedSignal.AddObserver(
+		std::bind_front(&TaskbarThumbnails::OnDirectoryPropertiesChanged, this)));
 	m_connections.push_back(m_tabContainer->tabSelectedSignal.AddObserver(
 		std::bind_front(&TaskbarThumbnails::OnTabSelectionChanged, this)));
 	m_connections.push_back(m_tabContainer->tabRemovedSignal.AddObserver(
@@ -626,6 +628,13 @@ void TaskbarThumbnails::OnNavigationCompleted(const Tab &tab, const NavigatePara
 	UNREFERENCED_PARAMETER(navigateParams);
 
 	InvalidateTaskbarThumbnailBitmap(tab);
+}
+
+void TaskbarThumbnails::OnDirectoryPropertiesChanged(const Tab &tab)
+{
+	InvalidateTaskbarThumbnailBitmap(tab);
+	SetTabProxyIcon(tab);
+	UpdateTaskbarThumbnailTitle(tab);
 }
 
 void TaskbarThumbnails::UpdateTaskbarThumbnailTitle(const Tab &tab)
