@@ -53,6 +53,7 @@ private:
 	void OnTabSelectionChanged(const Tab &tab);
 	void OnNavigationCommitted(const Tab &tab, const NavigateParams &navigateParams);
 	void OnNavigationCompleted(const Tab &tab, const NavigateParams &navigateParams);
+	void OnDirectoryPropertiesChanged(const Tab &tab);
 	void SetTabProxyIcon(const Tab &tab);
 	void InvalidateTaskbarThumbnailBitmap(const Tab &tab);
 	void UpdateTaskbarThumbnailTitle(const Tab &tab);
